fixed overflows

--- a/src/styles/NavBar/navbar.scss
+++ b/src/styles/NavBar/navbar.scss
@@ -86,6 +86,7 @@
         background: $white;
         transform: translateX(-200px);
         transition: transform 0.4s linear;
+        margin-top: 2px;
       }
 
       &:hover::after {
