--- a/src/styles/Subscribe/subscribe.scss
+++ b/src/styles/Subscribe/subscribe.scss
@@ -75,7 +75,11 @@
         border: 1px solid $red;
         border-radius: 999px;
         @include flex-center(row);
-        @include margin-left(20px);
+        @include margin-left(10px);
+
+        @include tab {
+          @include margin-left(20px);
+        }
       }
     }
   }
