--- a/src/styles/Third/third.scss
+++ b/src/styles/Third/third.scss
@@ -5,6 +5,7 @@
 .numbers {
   margin-top: 118px;
   margin-bottom: 180px;
+  overflow: hidden;
   @include flex-center(column);
 
   @include tab {
@@ -30,7 +31,7 @@
       background-clip: text;
       -webkit-background-clip: text;
       cursor: pointer;
-      transition: background-size 0.5s linear;
+      transition: background-size 0.2s linear;
 
       &:hover {
         color: transparent;
@@ -58,7 +59,7 @@
       background-clip: text;
       -webkit-background-clip: text;
       cursor: pointer;
-      transition: background-size 0.5s linear;
+      transition: background-size 0.2s linear;
     }
   }
   .number_three {
@@ -73,7 +74,7 @@
       background-clip: text;
       -webkit-background-clip: text;
       cursor: pointer;
-      transition: background-size 0.5s linear;
+      transition: background-size 0.2s linear;
 
       &:hover {
         background-size: 150%;
